# aubg-spaces-generic-programming

./: .gitignore  CMakeLists.txt  generic-programming - Shortcut.lnk
include/: buffer.hpp  circular_buffer.hpp  circular_buffer_tests.hpp  revision.hpp  revision_2.hpp  revision_tests.hpp  singleton.hpp
presentations/: Generic Programming 1 - Introduction to Generic Programming.pptx
src/: CMakeLists.txt  circular_buffer_tests.cpp  main.cpp  revision.cpp  revision_2.cpp  revision_tests.cpp
